Settings: Use a custom LineEdit directly instead of using an event filter, and address other comments.

--- a/src/citra_qt/CMakeLists.txt
+++ b/src/citra_qt/CMakeLists.txt
@@ -21,7 +21,7 @@ set(SRCS
             bootmanager.cpp
             hotkeys.cpp
             inputs.cpp
-            KeyPressEater.cpp
+            QLineEditKeyConfig.cpp
             main.cpp
             citra-qt.rc
             )
@@ -47,7 +47,7 @@ set(HEADERS
             bootmanager.h
             hotkeys.h
             inputs.h
-            KeyPressEater.h
+            QLineEditKeyConfig.h
             main.h
             version.h
             )
